chore: remove test function
