# docs/swagger.json
@@ -149,29 +149,6 @@
                 }
             }
         },
-        "/links/test": {
-            "get": {
-                "description": "Test handler to check server",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "links"
-                ],
-                "summary": "Test API",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/{code}": {
             "get": {
                 "description": "Nhận mã short link và redirect người dùng đến URL gốc",
