# internal/routes/linkRoutes.go
@@ -21,7 +21,6 @@ func (ur *LinkRoutes) Register(r *gin.RouterGroup) {
 
 	links := r.Group("/links")
 	{
-		links.GET("/test", ur.handler.TestHandler)
 		links.GET("",ur.handler.GetAllLinks)
 		links.GET("/link",ur.handler.GetByLink)
 		links.POST("",ur.handler.CreateLink)
